Fix spacing of horizontal scrollbar
Because the horizontal spacebar was to close to the edge of the window
it would be sometimes hard to click

--- a/web/htdocs/themes/facelift/scss/_main.scss
+++ b/web/htdocs/themes/facelift/scss/_main.scss
@@ -1510,9 +1510,13 @@ tr.hidden {
     width: $simplebar-scrollbar-width;
   }
 
-  &.simplebar-horizontal div.simplebar-scrollbar {
-    top: 3px;
-    height: $simplebar-scrollbar-width;
+  &.simplebar-horizontal {
+    height: $spacing-double;
+
+    div.simplebar-scrollbar {
+      top: 3px;
+      height: $simplebar-scrollbar-width;
+    }
   }
 }
 
